# nt_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  nt.hpp
libs/nt/: CMakeLists.txt  nt.cpp
libs/nt/include/: nt.hpp
libs/nt/include/nt/: matrix.hpp
tests/: CMakeLists.txt
tests/nt_test/: CMakeLists.txt  matrix_test.cpp  nt_test.cpp
